--- a/src/components/OurResultSection/ourResultSection.scss
+++ b/src/components/OurResultSection/ourResultSection.scss
@@ -1,23 +1,25 @@
 .our-result-section {
-    padding: 4rem;
     background-color: #030216;
     color: #ffffff;
     display: flex;
     justify-content: center;
-    height: 614px;
-  
+    
+    width: 100vw;
     .our-result-wrapper {
         max-width: 1200px;
         width: 100%;
         display: flex;
         flex-direction: column;
-  
+        margin-top: 40px;
+        margin-left: 50px;
+        margin-right: 50px;
       .result-header {
         display: flex;
         text-align: left;
         align-items: center;
         gap: 15px;
-  
+        width: 100%;
+
         .section-number {
             font-weight: 400;
             font-family: "Inter", sans-serif;
@@ -36,8 +38,8 @@
         .gradient-line {
      
             height: 1px;       
-            width: 51.881rem;
-              background: linear-gradient(to right, rgb(76, 78, 104), black);
+            flex: 1;
+            background: linear-gradient(to right, rgb(76, 78, 104), black);
         }
       }
   
@@ -56,20 +58,20 @@
   
         span {
             color: #ffffff;
-            font-size: 1rem;
+            font-size: 16px;
             font-family: "Poppins", sans-serif;
             letter-spacing: 0.02em;
             text-align: center;
             max-width: 1000px;
         }
-  
+    
         .testimonials {
             display: flex;
             align-items: center;
             justify-content: center;
             gap: 1rem;
             margin-top: 4rem;
-  
+            
           .testimonial-card {
             background: #1e1f3f;
             padding: 1.5rem;
@@ -122,6 +124,177 @@
               font-weight: 400;
               color: #C6C6C6;
             }
+          }
+        }
+      }
+    }
+    @media (min-width:1216px) {
+      .prev-btn,
+          .next-btn {
+            display: none;
+          }
+    }
+    @media (max-width:1215px) {
+      .result-content {
+       
+      
+  
+      
+        .testimonials {
+          .prev-btn,
+          .next-btn {
+           
+            height: 30px;
+            width: 30px;
+           z-index: 2;
+           background: transparent;
+           border: 1px solid #ffffff;
+           border-radius: 5px;
+           cursor: pointer;
+           color: #27aed8;
+           text-align: center;
+           font-size: 1rem;
+           display: flex;
+           align-items: center;
+           justify-content: center;
+            &:hover {
+              background-color: rgba(255, 255, 255, 0.1);
+            }
+            img{
+              height: 12px;
+              width: 7px;
+            }
+          }
+          .testimonial-card {
+            max-width: 360px;
+            width: 100%;
+            .quote {    
+            font-size: 20px !important;
+            margin-left: 20px !important;
+            margin-right: 20px !important;
+          }
+          span {
+ 
+            font-size: 1rem;
+          }
+          }
+        }
+      }
+    }
+    @media (max-width: 918px) {
+      
+      .result-content {
+       
+        h2 {
+          display: none;
+        }
+  
+        span {
+          font-size: 12px !important;
+          margin-top: 20px;
+        }
+        .testimonials {
+          .prev-btn,
+          .next-btn {
+            margin: -60px;
+            height: 30px;
+            width: 30px;
+           z-index: 2;
+           background: transparent;
+           border: 1px solid #ffffff;
+           border-radius: 5px;
+           cursor: pointer;
+           color: #27aed8;
+           text-align: center;
+           font-size: 1rem;
+           display: flex;
+           align-items: center;
+           justify-content: center;
+            &:hover {
+              background-color: rgba(255, 255, 255, 0.1);
+            }
+            img{
+              height: 12px;
+              width: 7px;
+            }
+          }
+          .testimonial-card {
+            .quote {    
+            font-size: 20px !important;
+            margin-left: 20px !important;
+            margin-right: 20px !important;
+          }
+          span {
+ 
+            font-size: 1rem;
+          }
+          }
+        }
+      }
+    }
+  
+    @media (max-width: 480px) {
+      .our-result-wrapper {
+        width: calc(100vw - 25px);
+        margin-left:0px;
+        margin-right: 0px;
+      }
+      .result-content {
+     
+        h2 {
+           display: none;
+        }
+  
+        span {
+         font-size: 12px !important;
+         margin-top: 20px;
+        }
+        .testimonials {
+          
+          max-width: 360px;
+          
+           
+          
+          width: 100%;
+          .prev-btn,
+          .next-btn {
+            background: transparent;
+            border: 1px solid #ffffff;
+            border-radius: 5px;
+            height: 30px;
+            width: 30px;
+            cursor: pointer;
+            color: #27aed8;
+            text-align: center;
+            font-size: 1rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            &:hover {
+              background-color: rgba(255, 255, 255, 0.1);
+            }
+            
+          }
+          .testimonial-card {
+            
+            div{
+              .comma{
+                height: 31px !important;
+                width: 37px !important;;
+              }
+            }
+            .quote {    
+              font-size:20px !important;
+              margin-left: 20px !important;
+              margin-right: 20px !important;
+            }
+            h3{
+              font-size:20px !important;
+            }
+            span {
+ 
+              font-size:16px !important;
+          }
           }
         }
       }
