--- a/src/components/headerSection/headerSection.scss
+++ b/src/components/headerSection/headerSection.scss
@@ -7,7 +7,7 @@
   height: 623px;
   background: radial-gradient(ellipse, #0950a0e5 0%, #05011f 80%);
   max-width: 100vw;
-
+  
   h1 {
     font-family: "Open Sans", sans-serif;
     font-size: 3rem;
@@ -57,7 +57,7 @@
   .header-buttons {
     display: flex;
     gap: 2.5rem;
-    margin-bottom: 2rem;
+    margin-bottom: 50px;
 
     @media (max-width: 768px) {
       gap: 1.5rem;
@@ -180,7 +180,7 @@
     border-top: 2px solid #90909299;
     border-bottom: 2px solid #90909299;
     overflow: hidden;
-  
+   
     @media (max-width: 768px) {
       height: auto;
       padding: 1rem 0;
