--- a/src/components/ourTeam/ourTeam.scss
+++ b/src/components/ourTeam/ourTeam.scss
@@ -1,11 +1,11 @@
 
 .our-team-container{
-  padding: 4rem;
+
   background-color: #030216;
   color: #ffffff;
   display: flex;
   justify-content: center;
-  height: 614px;
+  width: 100vw;
   
 
   .our-team-wrapper {
@@ -13,11 +13,15 @@
       width: 100%;
       display: flex;
       flex-direction: column;
+      margin-top: 40px;
+      margin-left: 50px;
+      margin-right: 50px;
     .section-header {
       display: flex;
       text-align: left;
       align-items: center;
       gap: 15px;
+      width: 100%;
       .section-number {
           font-weight: 400;
           font-family: "Inter", sans-serif;
@@ -37,7 +41,7 @@
    
         height: 1px;
         
-        width: 51.881rem;
+        flex: 1;
        
           background: linear-gradient(to right, rgb(76, 78, 104), black);
       }
@@ -72,19 +76,9 @@
           flex-direction: column;
           align-items: start;
           position: relative;
+
         }
-        &::before {
-          content: "";
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          background-color: rgba(255, 2, 2, 0.5); // Black overlay with 50% opacity
-          z-index: 1;
-          transition: all 0.3s ease-in-out;
-          opacity: 0; // Hidden by default
-        }
+
         .card {
         
           &::before {
@@ -102,12 +96,12 @@
           }
 
       
-        img {
+           img {
           position: absolute;
           width: 100%;
           object-fit: cover;
           height: 100%;
- 
+          object-position: top;
           .iconprofile{
             position: absolute;
             height: 54px;
@@ -116,7 +110,7 @@
             left: 20px;
           }
         }
-      }
+       }
         .card-info {
           padding: 1rem;
        
@@ -189,10 +183,124 @@
         //   height: 100%;
         //   background-color: rgba(0, 0, 0, 0.5); /* Change the color and opacity as needed */
         // }
+        
       }
     }
     
+    @media (max-width: 768px) {
+      
+      .card-container {
+      
+        h2{
+          display: none;
+        }
+        span{
+          font-size: 12px;
+        }
+      div{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+       
+        .card {
+          max-width: calc(100vw - 20px);
+          width: calc(100vw - 20px);
+          height: 93px;
+          margin: 0px;
+          border-radius: 30px;
+        }
+        &::before {
+         
+        }
+        .card {
+        
+          &::before {
+           
+          }
+
+      
+          img {
+            position: absolute;
+            width: 100%;
+            object-fit: cover;
+            height: 100%;
+            
+            .iconprofile{
+              position: absolute;
+              height: 54px;
+              width: 56px;
+              bottom: 0;
+              left: 20px;
+            }
+        }
+       }
+   
+        
+        .card h3 {
+          margin: 0.5rem 0;
+          font-size: 16px !important;
+          // position: absolute;
+        }
+        
+        .card p {
+          font-size: 14px !important;
+          margin: 0;
+          // position: absolute;
+        }
+        .card.expanded h3 {
+          margin: 0.5rem 0;
+          font-size: 1.25rem;
+          position: absolute;
+          bottom: 30px;
+          left: 100px;   z-index: 2;
+        }
+        
+        .card.expanded p {
+          font-size: 1rem;
+           margin: 0;
+           position: absolute;
+           bottom: 15px;
+           left: 100px;
+           z-index: 2;
+        }
+        /* Expanded state */
+        .card.expanded {
+          height: 300px;
+          width: calc(100vw - 20px);
+         
+          .iconprofile{
+            position: absolute;
+            height: 54px;
+            width: 56px;
+            bottom: 15px;
+            left: 20px;
+            z-index: 2;
+          }
+         
+        }
+        
+        .card.expanded img {
+          object-fit: cover;
+          height: 100%;
+          width: 100%;
+          
+        }
+      }
+
+
+      
+      }
+    }
     
+  }
+  @media (max-width: 480px) {
+    .our-team-wrapper {
+      width: calc(100vw - 25px);
+      margin-left:0px;
+      margin-right: 0px;
+    }
+
     
   }
 }
